--- a/form-login/style.css
+++ b/form-login/style.css
@@ -19,6 +19,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .container_form{
@@ -32,6 +33,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .container_form h1{
@@ -148,4 +150,171 @@ footer p{
 footer a {
     text-decoration: none;
     color: rgb(133, 133, 255);
+}
+
+/* Começando animação do background */
+
+.circles{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(2){
+    left: 65%;
+    width: 50px;
+    height: 50px;
+    animation-delay: 1s;
+}
+
+.circles li:nth-child(3){
+    left: 10%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(4){
+    left: 90%;
+    width: 50px;
+    height: 50px;
+    animation-delay: 2.5s;
+
+}
+
+.circles li:nth-child(5){
+    left: 77%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(6){
+    left: 30%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 5s;
+}
+
+.circles li:nth-child(7){
+    left: 3%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 1s;
+}
+
+/* 2 temmpos */
+
+.circles li:nth-child(8){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 13s;
+}
+
+.circles li:nth-child(9){
+    left: 65%;
+    width: 50px;
+    height: 50px;
+    animation-delay: 15s;
+}
+
+.circles li:nth-child(10){
+    left: 10%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 15s;
+}
+
+.circles li:nth-child(11){
+    left: 90%;
+    width: 50px;
+    height: 50px;
+    animation-delay: 15.5s;
+
+}
+
+.circles li:nth-child(12){
+    left: 77%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 16s;
+}
+
+.circles li:nth-child(13){
+    left: 30%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 18s;
+}
+
+.circles li:nth-child(14){
+    left: 3%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 13s;
+}
+
+.circles li:nth-child(15){
+    left: 42%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 1s;
+}
+
+.circles li:nth-child(16){
+    left: 57%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 5s;
+}
+
+.circles li:nth-child(17){
+    left: 42%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 14s;
+}
+
+.circles li:nth-child(18){
+    left: 57%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 18s;
+}
+
+
+@keyframes animate {
+    0% {
+        transform:translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100% {
+        transform:  translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
 }
